# claudeverb

./: ARCHITECTURE.md  CLAUDE.md  pyproject.toml  readme.md
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: dattorro-preset-keyerror.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
claudeverb/: config.py  engine.py  streamlit_app.py
claudeverb/algorithms/: __init__.py  base.py  chamber.py  chamber_presets.py  dattorro_asymmetric.py  dattorro_asymmetric_presets.py  dattorro_plate.py  dattorro_presets.py  dattorro_single_loop.py  dattorro_single_loop_presets.py  dattorro_triple_diffuser.py  dattorro_triple_diffuser_presets.py  filters.py  (+9 more)
docs/: FWHT_to_c.md  dattorro_plate_diagram.md  fdn_8x8_diagram.md
tests/: conftest.py  test_allpass_filter.py  test_analysis_metrics.py  test_audio_io.py  test_biquad.py  test_block_processing.py  test_c_export.py  test_c_portability.py  test_comb_filter.py  test_dattorro_plate.py  test_dattorro_preset_guard.py  test_dattorro_variants.py  test_delay_line.py  test_dtype_enforcement.py  test_early_reflections.py  test_end_to_end.py  test_engine.py  test_fdn_reverb.py  test_freeverb.py  test_impulse_response.py  test_room_reverbs.py  test_samples.py  test_signal_flow.py  test_spectral.py  test_streamlit_app.py
(+136 files in other folders)
